# stm32-base-project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  openocd.cfg
Core/: CMakeLists.txt
Core/Inc/: gpio.h  main.hpp  sys.h
Core/Src/: main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c
core/: CMakeLists.txt
core/include/: main.hpp  stm32f1xx_hal_conf.h  stm32f1xx_it.h  sys.h
core/src/: main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c  sys.c  system_stm32f1xx.c
drivers/: CMakeLists.txt
drivers/CMSIS/Core/include/: cmsis_armclang.h  cmsis_gcc.h  cmsis_version.h  core_cm0.h  core_cm0plus.h  core_cm23.h  core_sc000.h  core_sc300.h  mpu_armv8.h
drivers/CMSIS/Core_A/include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  (+5 more)
drivers/CMSIS/include/: cmsis_armcc.h  cmsis_iccarm.h  core_armv8mbl.h  core_armv8mml.h  core_cm1.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  mpu_armv7.h
drivers/STM32F1xx_HAL_Driver/include/: stm32_assert_template.h  stm32f1xx_hal.h  stm32f1xx_hal_adc.h  stm32f1xx_hal_adc_ex.h  stm32f1xx_hal_can.h  stm32f1xx_hal_cec.h  stm32f1xx_hal_conf_template.h  stm32f1xx_hal_cortex.h  stm32f1xx_hal_crc.h  stm32f1xx_hal_dac.h  stm32f1xx_hal_dac_ex.h  stm32f1xx_hal_def.h  stm32f1xx_hal_dma.h  stm32f1xx_hal_dma_ex.h  stm32f1xx_hal_eth.h  stm32f1xx_hal_exti.h  stm32f1xx_hal_flash.h  stm32f1xx_hal_flash_ex.h  stm32f1xx_hal_gpio.h  stm32f1xx_hal_gpio_ex.h  stm32f1xx_hal_hcd.h  stm32f1xx_hal_i2c.h  stm32f1xx_hal_i2s.h  stm32f1xx_hal_irda.h  stm32f1xx_hal_iwdg.h  stm32f1xx_hal_mmc.h  stm32f1xx_hal_nand.h  stm32f1xx_hal_nor.h  stm32f1xx_hal_pccard.h  stm32f1xx_hal_pcd.h  stm32f1xx_hal_pcd_ex.h  stm32f1xx_hal_pwr.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_rcc_ex.h  stm32f1xx_hal_rtc.h  stm32f1xx_hal_rtc_ex.h  stm32f1xx_hal_sd.h  stm32f1xx_hal_smartcard.h  stm32f1xx_hal_spi.h  stm32f1xx_hal_sram.h  (+27 more)
drivers/STM32F1xx_HAL_Driver/src/: stm32f1xx_hal.c  stm32f1xx_hal_adc.c  stm32f1xx_hal_adc_ex.c  stm32f1xx_hal_can.c  stm32f1xx_hal_cec.c  stm32f1xx_hal_cortex.c  stm32f1xx_hal_crc.c  stm32f1xx_hal_dac.c  stm32f1xx_hal_dac_ex.c  stm32f1xx_hal_dma.c  stm32f1xx_hal_eth.c  stm32f1xx_hal_exti.c  stm32f1xx_hal_flash.c  stm32f1xx_hal_flash_ex.c  stm32f1xx_hal_gpio.c  stm32f1xx_hal_gpio_ex.c  stm32f1xx_hal_hcd.c  stm32f1xx_hal_i2c.c  stm32f1xx_hal_i2s.c  stm32f1xx_hal_irda.c  stm32f1xx_hal_iwdg.c  stm32f1xx_hal_mmc.c  stm32f1xx_hal_msp_template.c  stm32f1xx_hal_nand.c  stm32f1xx_hal_nor.c  stm32f1xx_hal_pccard.c  stm32f1xx_hal_pcd.c  stm32f1xx_hal_pcd_ex.c  stm32f1xx_hal_pwr.c  stm32f1xx_hal_rcc.c  stm32f1xx_hal_rcc_ex.c  stm32f1xx_hal_rtc.c  stm32f1xx_hal_rtc_ex.c  stm32f1xx_hal_sd.c  stm32f1xx_hal_smartcard.c  stm32f1xx_hal_spi.c  stm32f1xx_hal_sram.c  stm32f1xx_hal_tim.c  stm32f1xx_hal_tim_ex.c  stm32f1xx_hal_timebase_rtc_alarm_template.c  (+21 more)
(+562 files in other folders)
